@@ -1,5 +1,12 @@
 2004-01-30  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* Makefile.in, aclocal.m4, configure, configure.ac,
+	  config/ac_check_peercred.m4, config/config.h.in, src/Makefile.in,
+	  src/etc/Makefile.in, src/libcommon/Makefile.in,
+	  src/libmissing/Makefile.in, src/libmunge/Makefile.in,
+	  src/munge/Makefile.in, src/munged/Makefile.in: Added checks
+	  for HAVE_GETPEEREID, HAVE_SO_PEERCRED, and HAVE_STRUCT_STRRECVFD.
+
 	* config/ac_debug.m4:
 	  Replaced obsolete AC_HELP_STRING with AS_HELP_STRING.
 
